--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
             <div class="row" id="display-result">
 
             </div>
+            <!-- Display result when error found -->
+            <div class="my-5">
+                <h3 class="text-center text-danger fw-bold" id="display-error">
+
+                </h3>
+            </div>
         </section>
     </main>
 
