details part done

--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
             </div>
         </section>
 
+        <!-- spineer add -->
+        <div class="text-center my-5" id="spinner">
+            <img src="images/128x128.gif" alt="">
+        </div>
+        <!-- Display details -->
+        <section class="container">
+            <div id="display-details">
+
+            </div>
+        </section>
         <!-- Display result when load data -->
         <section class="container">
             <div class="row" id="display-result">
